--- a/css/app.css
+++ b/css/app.css
@@ -42,9 +42,14 @@ body {
 
 h2 {
     margin: 0;
+    transition: transform 0.5s;
     transform: rotate(-45deg);
     text-shadow: 0 0 5px #01579b;
 }
+.destination:hover h2 {
+    transform: rotate(0deg);
+}
+
 
 #florida {
     background-color: #03a9f4;
